--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>qy</title>
+    <title>加速天数计算器 by 纠结</title>
   </head>
   <body>
     <noscript>
